--- a/output/map.ditamap
+++ b/output/map.ditamap
@@ -3,6 +3,14 @@
   PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
    <title>Debrief Topic Map</title>
+   <topicmeta>
+      <author>Debrief</author>
+      <publisher>Github John Bampton</publisher>
+      <keywords>
+         <keyword>XSLT</keyword>
+         <keyword>Saxon</keyword>
+      </keywords>
+   </topicmeta>
    <topicref href="dita/intro_composite.dita" type="task"/>
    <topicref href="dita/analysis_composite.dita" type="task"/>
    <topicref href="dita/s2r_composite.dita" type="task"/>
